inicia o core do game

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
       referrerpolicy="no-referrer"
     ></script>
     <script src="https://cdn.jsdelivr.net/gh/peterhry/CircleType@2.3.1/dist/circletype.min.js"></script>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>Complete the Fairy Tale</title>
   </head>
-  <body>
+  <body class="fadeIn">
     <div class="flores-container">
       <img src="./imagens/flores1.png" alt="flores" />
       <div>
@@ -53,5 +54,6 @@
       <img src="./imagens/rodape.png" />
     </footer>
     <script src="./scripts/curvadorDeTexto.js"></script>
+    <script src="./scripts/botoesIndex.js"></script>
   </body>
 </html>
