cria o core do sistema de resultados

--- a/jogo.html
+++ b/jogo.html
@@ -31,6 +31,31 @@
     <div class="metade-container">
       <img id="banner" />
     </div>
+    <div class="resultado-container">
+      <div class="flores-container">
+        <img src="./imagens/flores1.png" class="flor-1" />
+        <img src="./imagens/flores2.png" class="flor-2" />
+        <img src="./imagens/flores1.png" class="flor-3" />
+        <img src="./imagens/flores2.png" class="flor-4" />
+      </div>
+      <div class="resultado-box">
+        <h2>SCORE:</h2>
+        <h3 id="score">03</h3>
+        <p>points</p>
+        <img src="./imagens/risco.png" />
+        <div>
+          <p style="font-size: 3.5vh">Your English level is:</p>
+          <h2 id="level">BEGINNER</h2>
+          <p id="desc">
+            Can understand and use familiar everyday expressions and very basic
+            phrases aimed at the satisfaction of needs of a concrete type. Can
+            introduce themselves and others and can ask and answer questions
+            about personal details.
+          </p>
+        </div>
+      </div>
+      <h2 id="acertos">00 a 08 acertos</h2>
+    </div>
     <button class="seta">
       <i class="fa-solid fa-chevron-right"></i>
     </button>
