--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="./imagens/feijao.png" />
         <p>Jack and the Beanstalk</p>
       </button>
-      <button id="objeto">
+      <button id="objeto" value="the-little-red-riding-hood">
         <img src="./imagens/cesta.png" />
         <p>The Little Red Riding Hood</p>
       </button>
