finaliza os jogos

--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
       <img src="./imagens/flores2.png" alt="flores" />
     </div>
     <div class="objetos-container">
-      <button id="objeto">
+      <button id="objeto" value="snow-white">
         <img src="./imagens/maca.png" />
         <p>Snow White</p>
       </button>
-      <button id="objeto">
+      <button id="objeto" value="cinderella">
         <img src="./imagens/sapato.png" />
         <p>Cinderella</p>
       </button>
-      <button id="objeto">
+      <button id="objeto" value="rapunzel">
         <img src="./imagens/torre.png" />
         <p>Rapunzel</p>
       </button>
-      <button id="objeto">
+      <button id="objeto" value="hensel-and-gretel">
         <img src="./imagens/casa.png" />
         <p>Hansel and Gretel</p>
       </button>
-      <button id="objeto">
+      <button id="objeto" value="jack-and-the-beanstalk">
         <img src="./imagens/feijao.png" />
         <p>Jack and the Beanstalk</p>
       </button>
